--- a/contato.html
+++ b/contato.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ONG Turma do Bem</title>
+  <title>Contato - ONG Turma do Bem</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Projeto Dentinho Cadastrado — Turma do Bem</h1>
+    <h1>Entre em Contato</h1>
     <img src="imagens/logo-turma-do-bem.png" alt="Logo Turma do Bem" class="logo">
   </header>
 
@@ -21,10 +21,12 @@
   </nav>
 
   <main>
-    <h2>Bem-vindo!</h2>
-    <p>Nosso projeto tem como objetivo facilitar o atendimento odontológico da ONG Turma do Bem, por meio de um cartão físico com QR Code que dá acesso à ficha digital do paciente. Essa solução traz mais organização, agilidade e segurança para os atendimentos.</p>
-    <img src="imagens/Dentinho Cadastrado.png" alt="cartao" class="cartao">
-</main>
+    <h2>Informações da ONG</h2>
+    <p><strong>ONG Turma do Bem</strong></p>
+    <p>Email: contato@turmadobem.org.br</p>
+    <p>Endereço: Rua da turma do bem, 123 - São Paulo, SP</p>
+    <p>Telefone: (11) 1111-1111</p>
+  </main>
 
   <footer>
     <p>© 2025 ONG Turma do Bem | Projeto desenvolvido por Enzo Yukio e João Victor</p>
