--- a/integrantes.html
+++ b/integrantes.html
@@ -30,7 +30,7 @@
       <img src="imagens/enzo.jpg" alt="Enzo Yukio" width="150">
       <h3>Enzo Yukio Oyadomari</h3>
       <p>RM: 561032</p>
-      <p>Turma: TDSPR</p>
+      <p>Turma: 1TDSPR</p>
       <p>
         <a href="https://github.com/enzoyukio2005-netizen" target="_blank">GitHub</a> |
         <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
@@ -41,7 +41,7 @@
       <img src="imagens/joao.jpg" alt="João Victor" width="150">
       <h3>João Victor de Souza Braz</h3>
       <p>RM: 566862</p>
-      <p>Turma: TDSPR</p>
+      <p>Turma: 1TDSPR</p>
       <p>
         <a href="https://github.com/joaovictor5179" target="_blank">GitHub</a> |
         <a href="https://www.linkedin.com/in/souzabrazj?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
