--- a/index.html
+++ b/index.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ONG Turma do Bem</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Turma do Bem — Início</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>Projeto Dentinho Cadastrado — Turma do Bem</h1>
+  <header class="site-header" role="banner">
     <img src="imagens/logo-turma-do-bem.png" alt="Logo Turma do Bem" class="logo">
+    <h1>ONG Turma do Bem</h1>
   </header>
 
-  <nav>
-    <a href="index.html">Início</a>
+  <nav class="top-nav" role="navigation" aria-label="Menu principal">
+    <a href="index.html" aria-current="page">Início</a>
     <a href="sobre.html">Sobre</a>
     <a href="faq.html">FAQ</a>
     <a href="contato.html">Contato</a>
     <a href="integrantes.html">Integrantes</a>
   </nav>
 
-  <main>
-    <h2>Bem-vindo!</h2>
-    <p>Nosso projeto tem como objetivo facilitar o atendimento odontológico da ONG Turma do Bem, por meio de um cartão físico com QR Code que dá acesso à ficha digital do paciente. Essa solução traz mais organização, agilidade e segurança para os atendimentos.</p>
-    <img src="imagens/Dentinho Cadastrado.png" alt="cartao" class="cartao">
-</main>
+  <main class="site-main container" role="main">
+    <article class="card" aria-labelledby="welcome-title">
+      <h2 id="welcome-title">Sorriso com tecnologia e solidariedade</h2>
+      <p>Conectamos pacientes a dentistas voluntários com um cartão físico que contém um QR Code único — acesso rápido à ficha digital do paciente e melhor organização dos atendimentos.</p>
+      <img src="imagens/cartao.png" alt="Cartão com QR Code exemplo" class="cardao-img">
+      <p class="center">
+        <a class="btn" href="login.html">Entrar / Criar Conta</a>
+      </p>
+    </article>
 
-  <footer>
-    <p>© 2025 ONG Turma do Bem | Projeto desenvolvido por Enzo Yukio e João Victor</p>
+    <aside class="card" aria-labelledby="why-title">
+      <h3 id="why-title">Por que usar?</h3>
+      <ul>
+        <li>Registro único e acessível do paciente</li>
+        <li>Histórico de atendimentos centralizado</li>
+        <li>Baixo custo de implementação</li>
+      </ul>
+    </aside>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <p>© 2025 ONG Turma do Bem — Projeto acadêmico</p>
   </footer>
+
+  <nav class="bottom-nav" aria-label="Navegação inferior">
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="faq.html">FAQ</a>
+    <a href="contato.html">Contato</a>
+    <a href="integrantes.html">Integrantes</a>
+  </nav>
 </body>
 </html>
