--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <article class="card" aria-labelledby="welcome-title">
       <h2 id="welcome-title">Sorriso com tecnologia e solidariedade</h2>
       <p>Conectamos pacientes a dentistas voluntários com um cartão físico que contém um QR Code único — acesso rápido à ficha digital do paciente e melhor organização dos atendimentos.</p>
-      <img src="imagens/cartao.png" alt="Cartão com QR Code exemplo" class="cardao-img">
+      <img src="imagens/Dentinho Cadastrado.png" alt="Cartão com QR Code exemplo" class="cardao-img">
       <p class="center">
         <a class="btn" href="login.html">Entrar / Criar Conta</a>
       </p>
