--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,8 @@
   <title>Contato — Turma do Bem</title>
   <link rel="stylesheet" href="style.css">
 </head>
+    <script src="script.js"></script>
+
 <body>
   <header class="site-header" role="banner">
     <img src="imagens/logo-turma-do-bem.png" alt="Logo Turma do Bem" class="logo">
