--- a/integrantes.html
+++ b/integrantes.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="script.js"></script>
+
   <header class="site-header" role="banner">
     <img src="imagens/logo-turma-do-bem.png" alt="Logo Turma do Bem" class="logo">
     <h1>Quem Somos</h1>
