--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Turma do Bem — Início</title>
   <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
     <script src="script.js"></script>
@@ -13,6 +14,17 @@
     <img src="imagens/logo-turma-do-bem.png" alt="Logo Turma do Bem" class="logo">
     <h1>ONG Turma do Bem</h1>
   </header>
+
+<div class="card slide-left">
+  <h3>Campanha do Sorriso</h3>
+  <p>Leve alegria e autoestima a quem precisa.</p>
+</div>
+
+<div class="card slide-right">
+  <h3>Projeto Mulheres Fortes</h3>
+  <p>Atendimento gratuito e acolhimento seguro.</p>
+</div>
+
 
   <nav class="top-nav" role="navigation" aria-label="Menu principal">
     <a href="index.html" aria-current="page">Início</a>
