--- a/integrantes.html
+++ b/integrantes.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="script.js"></script>
-
   <header class="site-header" role="banner">
     <img src="imagens/logo-turma-do-bem.png" alt="Logo Turma do Bem" class="logo">
     <h1>Quem Somos</h1>
@@ -26,20 +24,23 @@
     <article class="card" aria-labelledby="team-title">
       <h2 id="team-title">Nossa equipe</h2>
 
+         <div class="card slide-left">
       <section class="integrante" aria-labelledby="enzo">
         <img src="imagens/fotoenzo.jpg" alt="Foto de Enzo Yukio Oyadomari">
         <h3 id="enzo">Enzo Yukio Oyadomari</h3>
         <p>RM: 561032</p>
         <p>Turma: TDSPR</p>
       </section>
-
+      </div>
+      <div class="card slide-right">
       <section class="integrante" aria-labelledby="joao">
+        
         <img src="imagens/fotojoao.jpg" alt="Fot">
         <h3 id="joao">João Victor de Souza Braz</h3>
         <p>RM: 566862</p>
         <p>Turma: TDSPR</p>
       </section>
-
+      </div>
     </article>
   </main>
 
